--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/general-samples-snp.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/general-samples-snp.mdx
@@ -9,15 +9,30 @@ import {
 } from "./general-corruption-images.js";
 
 export const SNPSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const snpUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Salt_and_Pepper_Noise'))
-    : snp_general_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const snpUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Salt_and_Pepper_Noise/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      snpUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = snpUrls.length === 6 ? snpUrls : snp_general_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={snpUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={2}
       corruption_name="General: Salt and Pepper Noise"
